Fix spacing in pricing and pictures on card

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -62,7 +62,7 @@ body {
   font-weight: 700;
 }
 
-.nav-menu-link {
+.main-nav {
   font-family: "Open Sans";
   font-size: 16px;
   line-height: 21.79px;
@@ -177,26 +177,58 @@ strong,
 /* ************************************* */
 /* ANCHOR */
 /* ************************************* */
-#nav-link-container {
+.nav-link-container {
   position: absolute;
-  left: 0%;
-  right: -2.17%;
-  top: 0%;
-  bottom: 0%;
+  background-color: rgba(255, 255, 255, 0.8);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  transform: translateX(100%);
 
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 22px;
-
-  /* old Flex */
-  display: none;
+  display: flex;
   align-items: center;
-  text-align: center;
-  color: #ffffff;
+  justify-content: center;
+  transition: all 0.5s ease-in;
+
+  /* hides nav */
+  /* Allows no transitions at all */
+  /* display: none; */
+
+  /* 1) Hide nav visually */
+  opacity: 0;
+  /* 2) Make it unaccessible to mouse and keyboard */
+  pointer-events: none;
+  /* 3) Hide it from screen readers */
+  visibility: hidden;
 }
 
+.nav-open .main-nav {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+  transform: translateX(0);
+}
+
+.nav-open .icon-mobile-nav[name="close-outline"] {
+  display: block;
+}
+
+.nav-open .icon-mobile-nav[name="menu-outline"] {
+  display: none;
+}
+
+.main-nav-list {
+  list-style: none;
+  flex-direction: column;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  font-size: 3rem;
+}
 /* ************************************* */
 /* TEXT */
 /* ************************************* */
