--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  z-index: 999;
   align-items: center;
   padding: 5px 16px;
   gap: 56px;
@@ -37,6 +38,10 @@
   align-items: center;
 }
 
+/* ************************************* */
+/* NAV MENU OPEN/CLOSE */
+/* ************************************* */
+
 .btn-mobile-nav {
   background-color: rgba(0, 0, 0, 0);
   border: none;
@@ -51,6 +56,59 @@
   height: 36px;
   width: 36px;
   padding: 5px;
+}
+
+.main-nav {
+  position: absolute;
+  top: 5.3rem;
+  left: 0;
+  width: 100%;
+  height: 29.5rem;
+  transform: translateY(-100%);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.25s ease-in;
+
+  /* hides nav */
+  /* Allows no transitions at all */
+  /* display: none; */
+
+  /* 1) Hide nav visually */
+  opacity: 0;
+  /* 2) Make it unaccessible to mouse and keyboard */
+  pointer-events: none;
+  /* 3) Hide it from screen readers */
+  visibility: hidden;
+}
+
+.main-nav-link {
+  padding: 1.2rem;
+}
+
+.nav-open .main-nav {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 21.8px;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #585446;
 }
 /* ************************************* */
 /* HOME */
@@ -77,7 +135,10 @@
 /* MY SERVICE */
 /* ************************************* */
 #service img {
+  height: 240px;
   width: 100%;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .srv-card {
@@ -86,6 +147,10 @@
   border-radius: 0.4rem;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.28), 0px 0px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  min-width: 34.3rem;
+  max-width: 59.6rem;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 .srv-card h2 {
@@ -169,6 +234,7 @@
 }
 
 #pricing h2 {
+  position: absolute;
   padding-left: 1.6rem;
 }
 /* question: the padding on these UL*/
